--- a/index.html
+++ b/index.html
@@ -8,49 +8,64 @@
     <title>Shpping Cart Simple Dom</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.50.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <!-- navbar part -->
-    <section>
-        <nav>
-            <div class="navbar bg-base-100 drop-shadow-md shadow-2xl rounded-lg  lg: px-10 ">
-                <div class="flex-1">
-                    <a class="btn btn-ghost normal-case text-xl">Quick Shopping</a>
-                </div>
-                <div class="flex-none gap-2">
-                    <div class="form-control">
-                        <input type="text" placeholder="Search" class="input input-bordered" />
-                    </div>
-                    <div class="dropdown dropdown-end">
-                        <label tabindex="0" class="btn btn-ghost btn-circle avatar">
-                            <div class="w-10 rounded-full">
-                                <img src="https://source.unsplash.com/random/200x200?sig=1" />
-                            </div>
-                        </label>
-                        <ul tabindex="0"
-                            class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
-                            <li>
-                                <a class="justify-between">
-                                    Profile
-                                    <span class="badge">New</span>
-                                </a>
-                            </li>
-                            <li><a>Settings</a></li>
-                            <li><a>Logout</a></li>
-                        </ul>
-                    </div>
+    <section class="">
+        <div class="navbar fixed top-0 left-0 right-0 z-50 bg-white shadow-lg border-none">
+            <div class="navbar-start">
+                <div class="dropdown">
+                    <label tabindex="0" class="btn btn-ghost btn-circle">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h16M4 18h7" />
+                        </svg>
+                    </label>
+                    <ul tabindex="0"
+                        class="menu menu-compact dropdown-content mt-5 p-2 shadow-lg bg-base-100 rounded-box w-52">
+                        <li><a>Homepage</a></li>
+                        <li><a>Services</a></li>
+                        <li><a>About</a></li>
+                    </ul>
                 </div>
             </div>
-        </nav>
+            <div class="navbar-center">
+                <a class="btn btn-ghost normal-case text-xl">Quick Shopping</a>
+            </div>
+            <div class="navbar-end">
+                <label for="my-modal-3" class="btn btn-ghost btn-circle">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                    </svg>
+                </label>
+            </div>
+        </div>
+        </header>
+        <!-- Search Modal -->
+        <input type="checkbox" id="my-modal-3" class="modal-toggle">
+        <div class="modal">
+            <div class="modal-box relative">
+                <label for="my-modal-3"
+                    class="btn btn-sm btn-circle border-none bg-base-100 text-black font-bold absolute right-2 top-2">✕</label>
+                <div class="form-control pr-6">
+                    <input type="text" placeholder="Search" class="input input-bordered bg-base-100 ">
+                </div>
+            </div>
+        </div>
+
     </section>
     <!-- main part -->
-    <main>
+    <main class="display-none mt-20">
         <section class="">
-            <div class="flex flex-col md: flex-row lg:flex-row mx-auto lg:px-10">
-                <div class="w-[70%]   grid grid-cols-3 gap-4 lg:p-5">
-                    <div class="card card-compact w-full h-96 bg-base-100 shadow-xl ">
-                        <figure><img class=" w-full h-44" src="/img/coffee.jpg" alt="Shoes" /></figure>
+            <div class="flex flex-col md:flex-row lg:flex-row mx-auto py-5 md:px-10 lg:px-10">
+                <div class="w-[75%] grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mx-auto  gap-4 lg:p-5">
+                    <div class="card card-compact w-full  bg-base-100 shadow-xl ">
+                        <figure><img class=" w-full" src="/img/coffee.jpg" alt="Shoes" /></figure>
                         <div class="card-body">
                             <h2 id="cofee-name" class="card-title">Coffee Js</h2>
                             <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, voluptates.</p>
@@ -62,7 +77,7 @@
                         </div>
                     </div>
                     <div class="card card-compact w-full h-96 bg-base-100 shadow-xl ">
-                        <figure><img class=" w-full h-44" src="/img/heart_js.jpg" alt="Shoes" /></figure>
+                        <figure><img class=" w-full" src="/img/heart_js.jpg" alt="Shoes" /></figure>
                         <div class="card-body">
                             <h2 id="heart-name" class="card-title">Heart Js</h2>
                             <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, voluptates.</p>
@@ -74,7 +89,7 @@
                         </div>
                     </div>
                     <div class="card card-compact w-full h-96 bg-base-100 shadow-xl ">
-                        <figure><img class=" w-full h-44" src="/img/panda.png" alt="Shoes" /></figure>
+                        <figure><img class=" w-full" src="/img/panda.png" alt="Shoes" /></figure>
                         <div class="card-body">
                             <h2 class="card-title">Panda Js</h2>
                             <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, voluptates.</p>
@@ -86,7 +101,7 @@
                         </div>
                     </div>
                     <div class="card card-compact w-full h-96 bg-base-100 shadow-xl ">
-                        <figure><img class=" w-full h-44" src="/img/umbrella.png" alt="Shoes" /></figure>
+                        <figure><img class=" w-full" src="/img/umbrella.png" alt="Shoes" /></figure>
                         <div class="card-body">
                             <h2 class="card-title">Umbrella Js</h2>
                             <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, voluptates.</p>
@@ -98,7 +113,7 @@
                         </div>
                     </div>
                     <div class="card card-compact w-full h-96 bg-base-100 shadow-xl ">
-                        <figure><img class=" w-full h-44" src="/img/vue-js.jpg" alt="Shoes" /></figure>
+                        <figure><img class=" w-full" src="/img/vue-js.jpg" alt="Shoes" /></figure>
                         <div class="card-body">
                             <h2 id="vue-name" class="card-title">Vue Js</h2>
                             <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, voluptates.</p>
@@ -114,7 +129,7 @@
 
 
                 </div>
-                <div class=" w-full md:w-[40%] lg:w-[40%] mx-auto">
+                <div class="w-full md:w-[40%] lg:w-[40%] ">
                     <h1 class="text-2xl text-center mt-2 underline font-semibold mb-3 ">Total Products: <span>0</span>
                     </h1>
                     <div class="overflow-hidden ">
@@ -140,11 +155,35 @@
                             </tbody>
                         </table>
                     </div>
-                    
                 </div>
+                <div class="p-10 mx-auto">
+                    <div>
+                        <h1 class="font-semibold text-2xl mt-3 ">
+                            Order&nbspSummary
+                        </h1>
+                        <div class="flex">
+                            <p>Items&nbsp3&nbsp</p>
+                            <p>GrandTotal:1000</p>
+                        </div>
+                        <div>
+                            <h1>Promo Code</h1>
+                            <input type="text" placeholder="Enter Your Code">
+                        </div>
+                        <button
+                            class="bg-red-500 hover:bg-red-600 px-5 py-2 text-sm text-white uppercase">Apply</button>
+                        <div class="flex">
+                            <p>Total&nbspCoast </p>
+                            <p>$600</p>
+                        </div>
+                        <button
+                            class="bg-indigo-500 font-semibold hover:bg-indigo-600 py-3 text-sm text-white uppercase w-full">Checkout</button>
+                    </div>
+                </div>
+                
             </div>
 
         </section>
+
     </main>
     <script src="js/app.js"></script>
 </body>
