--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 
     </section>
     <!-- main part -->
-    <main class="display-none mt-20">
+    <main class="display-none mt-20 ">
         <section class="">
             <div class="flex flex-col md:flex-row lg:flex-row mx-auto py-5 md:px-10 lg:px-10">
-                <div class="w-[75%] grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mx-auto  gap-4 lg:p-5">
-                    <div class="card card-compact w-full  bg-base-100 shadow-xl ">
-                        <figure><img class=" w-full" src="/img/coffee.jpg" alt="Shoes" /></figure>
+                <div class="w-[80%] grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mx-auto  gap-4 lg:p-5">
+                    <div class="card card-compact w-full h-96 bg-base-100 shadow-xl ">
+                        <figure><img class="object-center" src="/img/cofee.jpg" alt="Shoes" /></figure>
                         <div class="card-body">
                             <h2 id="cofee-name" class="card-title">Coffee Js</h2>
                             <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, voluptates.</p>
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                     <div class="card card-compact w-full h-96 bg-base-100 shadow-xl ">
-                        <figure><img class=" w-full" src="/img/vue-js.jpg" alt="Shoes" /></figure>
+                        <figure><img class=" w-full " src="/img/vue.jpg" alt="Shoes" /></figure>
                         <div class="card-body">
                             <h2 id="vue-name" class="card-title">Vue Js</h2>
                             <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, voluptates.</p>
@@ -162,8 +162,8 @@
                             Order&nbspSummary
                         </h1>
                         <div class="flex">
-                            <p>Items&nbsp:3&nbsp&nbsp&nbsp&nbsp</p>
-                            <p>GrandTotal&nbsp:1000</p>
+                            <p>Items&nbsp: 3&nbsp</p>
+                            <p>GrandTotal&nbsp: 1000</p>
                         </div>
                         <div>
                             <h1>Promo Code</h1>
