--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                             Order&nbspSummary
                         </h1>
                         <div class="flex">
-                            <p>Items&nbsp: 3&nbsp</p>
-                            <p>GrandTotal&nbsp: 1000</p>
+                            <p>Items&nbsp:3&nbsp&nbsp</p>
+                            <p>GrandTotal&nbsp:1000</p>
                         </div>
                         <div>
                             <h1>Promo Code</h1>
