--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
                 </div>
                 <div class="w-full md:w-[40%] lg:w-[40%] ">
-                    <h1 class="text-2xl text-center mt-2 underline font-semibold mb-3 ">Total Products: <span>0</span>
+                    <h1 class="text-2xl text-center mt-2 underline font-semibold mb-3 ">Total Products:<span id="items-count">0</span>
                     </h1>
                     <div class="overflow-hidden ">
                         <table class="table w-full">
@@ -162,8 +162,8 @@
                             Order&nbspSummary
                         </h1>
                         <div class="flex">
-                            <p>Items&nbsp:3&nbsp&nbsp</p>
-                            <p>GrandTotal&nbsp:1000</p>
+                            <p>Items&nbsp:<span id="products-count">0</span>&nbsp&nbsp</p>
+                            <p>GrandTotal&nbsp:<span id="grand-total">0</span></p>
                         </div>
                         <div>
                             <h1>Promo Code</h1>
