--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </div>
                 <div class="p-10 mx-auto">
                     <div>
-                        <h1 class="font-semibold text-2xl mt-3 ">
+                        <h1 class="font-semibold text-2xl  ">
                             Order&nbspSummary
                         </h1>
                         <div class="flex">
