--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </div>
                 <div class="p-10 mx-auto">
                     <div>
-                        <h1 class="font-semibold text-2xl  ">
+                        <h1 class="font-semibold text-2xl ">
                             Order&nbspSummary
                         </h1>
                         <div class="flex">
@@ -185,6 +185,7 @@
         </section>
 
     </main>
+    <script src="js/utilities.js"></script>
     <script src="js/app.js"></script>
 </body>
 
