error handel progress

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             class="bg-red-500 hover:bg-red-600 px-5 py-2 text-sm text-white uppercase">Apply</button>
                         <div class="flex">
                             <p>Total&nbspCoast </p>
-                            <p>$600</p>
+                            <p>$<span id="all-coast">600</span></p>
                         </div>
                         <button
                             class="bg-indigo-500 font-semibold hover:bg-indigo-600 py-3 text-sm text-white uppercase w-full">Checkout</button>
