--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
                         </div>
                         <div>
                             <h1>Promo Code</h1>
-                            <input type="text" placeholder="Enter Your Code">
+                            <input id="promo-input-field" class="py-2 mb-2 mt-2" type="text" placeholder="101">
                         </div>
                         <button
-                            class="bg-red-500 hover:bg-red-600 px-5 py-2 text-sm text-white uppercase">Apply</button>
+                           id="apply-btn" class="bg-red-500 hover:bg-red-600 px-5 py-2 text-sm text-white uppercase ">Apply</button>
                         <div class="flex">
                             <p>Total&nbspCoast </p>
                             <p>$<span id="all-coast">00</span></p>
